chore: fix bots reports position alignment

--- a/packages/trader/src/sass/app/_common/drawer/positions-drawer.scss
+++ b/packages/trader/src/sass/app/_common/drawer/positions-drawer.scss
@@ -15,7 +15,7 @@ $header-height: 3.6em;
     position: fixed;
     z-index: 2;
     top: #{$HEADER_HEIGHT};
-    inset-inline-start: 4px;
+    left: 4px;
     box-sizing: border-box;
     opacity: 0;
     transform: translateX(-100%);
@@ -46,9 +46,6 @@ $header-height: 3.6em;
     &--open {
         transform: translateX(#{$POSITIONS_DRAWER_MARGIN});
         opacity: 1;
-        @include rtl {
-            transform: translateX(#{-$POSITIONS_DRAWER_MARGIN});
-        }
     }
     &__header {
         height: $header-height;
